[gd_scene load_steps=7 format=3 uid="uid://btaqxr7o7vnyy"]

[ext_resource type="Texture2D" uid="uid://832be2rwrl1k" path="res://asset/texture/stickyNote.png" id="1_1tx07"]
[ext_resource type="Script" path="res://elements/stickyNote/sticky_note.gd" id="2_e1qrg"]
[ext_resource type="FontFile" uid="uid://bltfg6i06jtk7" path="res://asset/font/LifeSavers-Regular.ttf" id="2_nst7v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rjvnx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h0x5p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0u3ss"]
size = Vector2(320, 159)

[node name="StickyNote" type="NinePatchRect"]
texture_filter = 1
offset_right = 320.0
offset_bottom = 160.0
texture = ExtResource("1_1tx07")
region_rect = Rect2(16, 16, 304, 176)
patch_margin_right = 2
patch_margin_bottom = 5
script = ExtResource("2_e1qrg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 30)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 40.0
offset_right = 100.0
offset_bottom = 106.0
grow_horizontal = 2

[node name="Title" type="LineEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(320, 20)
layout_mode = 2
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_nst7v")
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = SubResource("StyleBoxEmpty_rjvnx")
theme_override_styles/normal = SubResource("StyleBoxEmpty_h0x5p")
placeholder_text = "<ENTER  A  TITLE>"
alignment = 1

[node name="Date" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(80, 10)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_nst7v")
theme_override_font_sizes/font_size = 20
text = "<DATE>"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
uppercase = true

[node name="Interact" type="Area2D" parent="."]

[node name="SelectBox" type="CollisionShape2D" parent="Interact"]
position = Vector2(160, 80)
shape = SubResource("RectangleShape2D_0u3ss")

[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="input_event" from="Interact" to="." method="_on_interact_input_event"]
